Add migration from first and last name to full name
